# Radpretation-Slicer-Plugin

./: .gitignore  CMakeLists.txt  README.md  RadpretationExtension.s4ext
RadpretationTools/: RadpretationTools.py
RadpretationTools/Integrations/: bridge_client.py  orthanc_client.py
RadpretationTools/Models/: StudyModel.py
RadpretationTools/Resources/UI/: RadpretationTools.ui
RadpretationTools/Services/: APIService.py  CacheManager.py  DICOMWebService.py  ExportService.py  LocalBridgeServer.py  SegmentationService.py  StudyLoader.py
RadpretationTools/UI/: LoginWidget.py  MainWidget.py  SettingsWidget.py  StudiesWidget.py  ToolbarWidget.py  ViewerWidget.py
RadpretationTools/Utils/: config.py  constants.py  events.py  helpers.py  logger.py
